Implemented several examples.

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Ofek Atar">
-    <link rel="stylesheet" href="./styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ofek Atar" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Animations & Transitions Practice</title>
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="box trans1"></div>
+    </div>
+  </body>
 </html>
